# MyModel-1

./: .gitignore  1.md  DEPENDENCIES.md  KAN_ANALYSIS.md  UV_ACCELERATION.md  check_device.py  check_token_lengths.py  config.json  convert_hermes_dataset.py  convert_toolmind_dataset.py  diagnose_training.py  inspect_dataset.py  load_cmmlu.py  mamba_encoder.py  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  router.py
