[project]
name = "playground1"
version = "0.1.0"
description = "Tool Router Model - Mamba-based tool routing for MCP tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 核心深度学习框架
    "torch>=2.0.0",
    "torchvision>=0.15.0",  # 可选，但某些模型可能需要
    
    # HuggingFace 生态系统
    "transformers>=4.40.0,<4.50.0",
    "tokenizers>=0.19.0,<0.20.0",  # transformers 依赖，需要明确指定版本
    "datasets>=4.4.1",
    "safetensors>=0.4.0",
    
    # 工具和工具类
    "tqdm>=4.67.1",
    "sentencepiece>=0.1.99",  # 用于某些 tokenizer
]

[project.optional-dependencies]
# 8-bit 优化器（仅 CUDA，ROCm 不支持）
bitsandbytes = [
    "bitsandbytes>=0.49.0",
]

# 模型下载（ModelScope，主要用于中国用户）
modelscope = [
    "modelscope>=1.9.0",
]

# 完整依赖（包括所有可选依赖）
all = [
    "bitsandbytes>=0.49.0",
    "modelscope>=1.9.0",
]

# 开发依赖
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# uv 特定配置
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
# Ruff 代码检查配置
line-length = 120
target-version = "py310"

[tool.black]
# Black 代码格式化配置
line-length = 120
target-version = ["py310"]
